# BFA

./: .gitignore  README.md  pyproject.toml
BFA/: config.yaml  io.py  main.py  utils.py
BFA/forced_aligner/: __init__.py  audio_preprocessor.py  g2p_engine.py  path_tracer.py  tensor_preprocessor.py  text_preprocessor.py
BFA/forced_aligner/g2p_engine/: __init__.py
BFA/forced_aligner/model/: __init__.py  decoder.py  encoder.py  joint_network.py
BFA/forced_aligner/model/weights/: bfa_model_decoder_100.pt  bfa_model_joint_network_100.pt
BFA/forced_aligner/text_preprocessor/: __init__.py
BFA/forced_aligner/text_preprocessor/tokenizer/: __init__.py
BFA/forced_aligner/tokenizer/: tokenizer.pkl
BFA/logs/: placeholder.txt
example/: cmd.txt
example/text/: recording_1.lab  recording_2.lab
example/text/deep/: recording_3.lab
